Fixed styling for mobile where ornaments caused x axis overflow

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,8 @@
     --Linear: linear-gradient(90deg, #2036FF 0%, #C348B0 100%);
 }
 
-body {
+body, html {
+    position: relative;
     padding: 0;
     margin: 0;
     font-family: "Quicksand", sans-serif;
@@ -11,6 +12,7 @@ body {
     font-weight: 500;
     line-height: normal;
     overflow-x: hidden;
+    max-width: 100%;
 }
 
 .project-svg {
@@ -18,9 +20,8 @@ body {
 }
 
 .nav-header {
-    width: 100vw;
+    width: 100%;
     height: 50px;
-    margin-right: 40px;
     display: flex;
     align-items: end;
     justify-content: flex-end;
